// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 1`] = `
"function_selector: 0
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 2`] = `
"function_selector: 16777216
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 3`] = `
"function_selector: 33554432
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 4`] = `
"function_selector: 50331648
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 5`] = `
"function_selector: 67108864
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 6`] = `
"function_selector: 83886080
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 7`] = `
"function_selector: 100663296
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 8`] = `
"function_selector: 117440512
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 9`] = `
"function_selector: 134217728
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 10`] = `
"function_selector: 150994944
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 11`] = `
"function_selector: 167772160
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 12`] = `
"function_selector: 184549376
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 13`] = `
"function_selector: 201326592
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 14`] = `
"function_selector: 218103808
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 15`] = `
"function_selector: 234881024
is_private: 1
is_constructor: 1
"
`;

exports[`basic FunctionData serialization serializes a trivial FunctionData and prints it 16`] = `
"function_selector: 251658240
is_private: 1
is_constructor: 1
"
`;
